# ThunderNanoServices

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  PropertySheet.props  README.md  WPEFrameworkPlugins.sln  params.config
AVS/: AVS.conf.in  AVS.config  AVS.cpp  AVS.h  AVSPlugin.json  CMakeLists.txt  Module.h
BTRemoteControl/: BTRemoteControl.cpp  BTRemoteControl.h  CMakeLists.txt  Module.h
BackOffice/: BackOffice.conf.in  BackOffice.config  BackOffice.cpp  BackOffice.h  BackOffice.json  BackOffice.vcxproj  BackOffice.vcxproj.filters  BackOfficePlugin.json  CMakeLists.txt  Module.cpp  Module.h  RequestSender.cpp  RequestSender.h
Bluetooth/: Bluetooth.config  Bluetooth.cpp  Bluetooth.h  BluetoothControl.config  BluetoothControl.cpp  BluetoothControl.h  BluetoothImplementation.cpp  BluetoothImplementation.h  BluetoothJSONContainer.h  CMakeLists.txt  Module.h  readme.txt
BluetoothAudio/: AudioEndpoint.h  BluetoothAudio.conf.in  BluetoothAudio.cpp  BluetoothAudio.h  BluetoothAudioPlugin.json  BluetoothAudioSink.cpp  BluetoothAudioSink.h  BluetoothAudioSource.cpp  BluetoothAudioSource.h  CMakeLists.txt  DebugTracing.h  Module.h  ServiceDiscovery.h  SignallingServer.h
BluetoothControl/: BluetoothControl.conf.in  BluetoothControl.config  BluetoothControl.cpp  BluetoothControl.h  BluetoothControl.json  BluetoothControlJsonRpc.cpp  BluetoothControlPlugin.json  BluetoothControlPlugin.md  CMakeLists.txt  JBluetoothControl.h  JBluetoothControl.h2  JBluetoothControl.h3  JsonData_BluetoothControl.h  Module.h  Tracing.h  readme.txt
BluetoothRemoteControl/: 4ModDecoders.cpp  ADPCMConvertor.h  Administrator.cpp  Administrator.h  BluetoothRemoteControl.conf.in  BluetoothRemoteControl.config  BluetoothRemoteControl.cpp  BluetoothRemoteControl.h  BluetoothRemoteControlJsonRpc.cpp  BluetoothRemoteControlPlugin.json  CMakeLists.txt  HID.cpp  HID.h  Module.h  T4HDecoders.cpp  WAVRecorder.h
BluetoothSDPServer/: BluetoothSDPServer.conf.in  BluetoothSDPServer.config  BluetoothSDPServer.cpp  BluetoothSDPServer.h  BluetoothSDPServerPlugin.json  CMakeLists.txt  DebugTracing.h  Module.h  SDPServerImplementation.h  Tracing.h
CECControl/: CECControl.conf.in  CECControl.config  CECControl.cpp  CECControl.h  CMakeLists.txt  Module.h
Cobalt/: .gitignore  CMakeLists.txt  Cobalt.conf.in  Cobalt.config  Cobalt.cpp  Cobalt.h  CobaltImplementation.cpp  CobaltJsonRpc.cpp  CobaltPlatformService.cpp  CobaltPlugin.json  Module.h
Commander/: .gitignore  CMakeLists.txt  Commander.conf.in  Commander.config  Commander.cpp  Commander.h  Commander.vcxproj  Commander.vcxproj.filters  CommanderPlugin.json  Commands.cpp  Commands.h  Module.h
Compositor/: .gitignore  CMakeLists.txt  Compositor.conf.in  Compositor.config  Compositor.cpp  Compositor.h  Compositor.vcxproj  Compositor.vcxproj.filters  CompositorJsonRpc.cpp  CompositorPlugin.json  CompositorPlugin.md  Module.h
DHCPServer/: CMakeLists.txt  DHCPServer.conf.in  DHCPServer.config  DHCPServer.cpp  DHCPServer.h  DHCPServer.vcxproj  DHCPServer.vcxproj.filters  DHCPServerImplementation.cpp  DHCPServerImplementation.h  DHCPServerJsonRpc.cpp  DHCPServerPlugin.json  DHCPServerPlugin.md  Module.h
DIALServer/: AmazonPrime.cpp  CMakeLists.txt  DIALServer.conf.in  DIALServer.config  DIALServer.cpp  DIALServer.h  DIALServer.vcxproj  DIALServer.vcxproj.filters  DIALServerJsonRpc.cpp  DIALServerPlugin.json  DIALServerPlugin.md  Module.h  Netflix.cpp  PassiveDIALServer.html  YouTube.cpp
DSResolution/: CMakeLists.txt  DSResolution.cpp  DSResolution.h  DSResolutionHAL.cpp  DSResolutionHAL.h  Module.h
DeviceIdentification/: CMakeLists.txt  DeviceIdentification.cpp  DeviceIdentification.h  DeviceIdentification.json  DeviceIdentificationJsonRpc.cpp  IdentityProvider.h  Module.h
DeviceInfo/: CMakeLists.txt  DeviceInfo.config  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo.vcxproj  DeviceInfo.vcxproj.filters  DeviceInfoJsonRpc.cpp  DeviceInfoPlugin.json  DeviceInfoPlugin.md
DeviceProvisioning/: CMakeLists.txt  DeviceProvisioning.config  DeviceProvisioning.cpp  DeviceProvisioning.h  DeviceProvisioningImplementation.cpp  Module.h
Dictionary/: .gitignore  CMakeLists.txt  Dictionary.conf.in  Dictionary.config  Dictionary.cpp  Dictionary.h  Dictionary.vcxproj  Dictionary.vcxproj.filters  DictionaryPlugin.json  Module.h
DisplayInfo/: CMakeLists.txt  ConnectionProperties.h  DevicePlatform.h  DeviceProperties.h  DisplayInfo.conf.in  DisplayInfo.config  DisplayInfo.cpp  DisplayInfo.h  DisplayInfoJsonRpc.cpp  DisplayInfoTracing.h  ExtendedDisplayIdentification.h  GraphicsProperties.h  Job.h  Module.h
DropbearServer/: CMakeLists.txt  DropbearServer.config  DropbearServer.cpp  DropbearServer.h  DropbearServer.json  DropbearServerImplementation.h  DropbearServerJsonRpc.cpp  Module.h
DsgccClient/: CMakeLists.txt  DsgParser.cpp  DsgParser.h  DsgccClient.config  DsgccClient.cpp  DsgccClient.h  DsgccClient.json  DsgccClientImplementation.cpp  DsgccClientImplementation.cpp_  DsgccClientImplementation.h  DsgccClientImplementation.h_  Module.h
FileTransfer/: CMakeLists.txt  FileTransfer.conf.in  FileTransfer.config  FileTransfer.cpp  FileTransfer.h  FileTransferPlugin.json  Module.cpp  Module.h
FirmwareControl/: CMakeLists.txt  DownloadEngine.h  FirmwareControl.conf.in  FirmwareControl.config  FirmwareControl.cpp  FirmwareControl.h  FirmwareControlJsonRpc.cpp  FirmwareControlPlugin.json  FirmwareControlPlugin.md  Module.h
FrontPanel/: CMakeLists.txt  FrontPanel.cpp  FrontPanel.h  FrontPanelHAL.cpp  FrontPanelHAL.h  Module.h
IOConnector/: BluetoothScan.cpp  CMakeLists.txt  GPIO.cpp  GPIO.h  Handler.cpp  Handler.h  IOConnector.conf.in  IOConnector.config  IOConnector.cpp  IOConnector.h  IOConnectorJsonRpc.cpp  IOConnectorPlugin.json  Module.h  PowerDown.cpp  RemotePairing.cpp  Reporter.cpp  TimedInput.h
InputSwitch/: CMakeLists.txt  InputSwitch.conf.in  InputSwitch.config  InputSwitch.cpp  InputSwitch.h  InputSwitch.vcxproj  InputSwitchJsonRpc.cpp  InputSwitchPlugin.json  InputSwitchPlugin.md  Module.h
LocationSync/: CMakeLists.txt  LocationSync.h  (+11 more)
(+1875 files in other folders)
